--- a/docker-compose-env.yml
+++ b/docker-compose-env.yml
@@ -144,7 +144,9 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
-
+      airflow-scheduler:
+        condition: service_healthy
+      
   airflow-scheduler:
     <<: *airflow-common
     command: scheduler
